much better styling now but prevent overlapping and do work on coloring dark

--- a/webcam/static/css/styles.css
+++ b/webcam/static/css/styles.css
@@ -7,7 +7,7 @@ body, html{
     border: 1px dotted black;
     margin: auto;
     width: 70%;
-    height: 100%;
+    /* height: 100%; */
     padding: 2%;
 }
 .headnav{
@@ -78,6 +78,9 @@ button, .button_input{
         max-width: 40vw;
         position: relative;
     }
+}
+#download{
+    margin: auto;
 }
 #screen-gif{
     width: 100%;
